# xams-geant4

./: .gitignore  README
anasrc/: compare.cc  edge.C  edge_entries.C  simple_compare.C
oldversions/: xams_v1.0.tar
xams-build/: CMakeCache.txt  Makefile  cmake_install.cmake  g4_fullVessel_wrong.wrl  g4_onlyXe.wrl  g4_withTpc_wrong.wrl  xams_sim
xams-build/run/: preinit.mac  runit_onlyXe.mac  runit_source.mac  visualize.mac
xams-code/: CMakeLists.txt  xams_sim.cc
xams-code/include/: XAMSAnalysisManager.hh  XAMSDetectorConstruction.hh  XAMSDetectorConstruction_old.H  XAMSDetectorMessenger.hh  XAMSEventAction.hh  XAMSEventData.hh  XAMSHit.hh  XAMSPhysicsList.hh  XAMSPhysicsMessenger.hh  XAMSPrimaryGeneratorAction.hh  XAMSPrimaryGeneratorMessenger.hh  XAMSRunAction.hh  XAMSRunActionMessenger.hh  XAMSSensitiveDetector.hh  XAMSStackingAction.hh  fileMerger.hh
xams-code/run/: g4_00.wrl  g4_01.wrl  preinit.mac  runit.mac  runit_source.mac  vis.mac  visualize.mac
xams-code/run/macros/: Cu_Co.mac  Cu_K.mac  Cu_Th.mac  Cu_U.mac  Flange_Co.mac  Flange_K.mac  Flange_Th.mac  Flange_U.mac  LXe_Th.mac  LXe_U.mac  PTFE_Co.mac  PTFE_K.mac  PTFE_Th.mac  PTFE_U.mac  QUPID_Co.mac  QUPID_K.mac  QUPID_Th.mac  QUPID_U.mac  alpha_s1_lce.mac  no_verbose.mac  test.mac  test2.mac  test_ap.mac  test_cryo1.mac  test_cryo2.mac  test_geantino.mac  vis.mac  vis1.mac  vis2.mac  vis3.mac
xams-code/run/spectra/: FeTh_neutron.mac  FeU_neutron.mac  TiTh_neutron.mac  TiU_neutron.mac  U10ppb_Th10ppb_K1ppm_gamma.mac  tape7_Titanium_Th  tape7_Titanium_U
xams-code/src/: .XAMSPhysicsList.cc.swp  XAMSAnalysisManager.cc  XAMSDetectorConstruction.cc  XAMSDetectorMessenger.cc  XAMSEventAction.cc  XAMSEventData.cc  XAMSHit.cc  XAMSPhysicsList.cc  XAMSPhysicsMessenger.cc  XAMSPrimaryGeneratorAction.cc  XAMSPrimaryGeneratorMessenger.cc  XAMSRunAction.cc  XAMSRunActionMessenger.cc  XAMSSensitiveDetector.cc  XAMSStackingAction.cc  fileMerger.cc
xams-figures/: g4_correctTpc_highLevel.wrl  g4_correctTpc_highLevel_fullVessel.wrl  g4_correctTpc_lowLevel_100evts_1MeV.wrl  g4_fullVessel.wrl  g4_innerVesselWithTpc.wrl  g4_innerVesselWoTpc.wrl  g4_insulationInclAll.wrl
